--- a/scss/api/_border.scss
+++ b/scss/api/_border.scss
@@ -3,7 +3,7 @@
 // --------------------------------
 
 @use '../config' as *;
-@use '../theme' as *;
+@use 'theme' as *;
 
 $_default-radius: config(fallbacks, radius);
 
