--- a/scss/api/_index.scss
+++ b/scss/api/_index.scss
@@ -11,6 +11,7 @@
 @forward 'size';
 @forward 'spacing';
 @forward 'svg';
+@forward 'theme';
 @forward 'timing';
 @forward 'transition';
 @forward 'typography';
