--- a/scss/config/_index.scss
+++ b/scss/config/_index.scss
@@ -1,17 +1,19 @@
-@use 'sass:map';
+@forward 'settings';
 
-@forward 'theme';
+// @use 'sass:map';
 
-@use 'defaults';
+// @forward 'theme';
 
-$config: () !default;
-$config: map.deep-merge(defaults.$config, $config);
+// @use 'defaults';
+
+// $config: () !default;
+// $config: map.deep-merge(defaults.$config, $config);
 
 // Get a config value
-@function config($keys...) {
-  @if map.has-key($config, $keys...) {
-    @return map.get($config, $keys...);
-  } @else {
-    @return null;
-  }
-}
+// @function config($keys...) {
+//   @if map.has-key($config, $keys...) {
+//     @return map.get($config, $keys...);
+//   } @else {
+//     @return null;
+//   }
+// }
