--- a/scss/theme/_index.scss
+++ b/scss/theme/_index.scss
@@ -2,14 +2,13 @@
 //   Theming support
 // ------------------------------------
 
-@forward 'helpers';
-@forward 'mixins' show create-themes, color-mode, light, dark;
+// @forward 'mixins' show create-themes, color-mode, light, dark;
 
-@use '../config' as *;
-@use 'helpers' as *;
-@use 'mixins' as *;
+// @use '../config' as *;
+// @use '../api' as *;
+// @use 'mixins' as *;
 
-// Output
-@mixin theme {
-  @include create-themes(theme(color-schemes));
-}
+// // Output
+// @mixin theme {
+//   @include create-themes(theme(color-schemes));
+// }
