--- a/scss/api/_media-query.scss
+++ b/scss/api/_media-query.scss
@@ -6,7 +6,7 @@
 @use 'sass:list';
 
 @use '../helpers' as *;
-@use '../theme' as *;
+@use 'theme' as *;
 
 // --------------------------------
 //   FUNCTIONS
