--- a/scss/api/_size.scss
+++ b/scss/api/_size.scss
@@ -2,7 +2,7 @@
 //   Size API
 // --------------------------------
 
-@use '../theme' as *;
+@use 'theme' as *;
 
 // TODO: Include fluid sizes?
 // --size-fluid-1: clamp(.5rem, 1vw, 1rem);
