--- a/scss/api/_transition.scss
+++ b/scss/api/_transition.scss
@@ -4,15 +4,15 @@
 
 @use 'sass:map';
 
-@use '../config' as *;
-@use '../theme' as *;
+@use 'setting' as *;
+@use 'theme' as *;
 
 // --------------------------------
 //   Values
 // --------------------------------
 
-$_default-duration: theme(duration, config(fallbacks, duration));
-$_default-timing-function: theme(timing, config(fallbacks, timing));
+$_default-duration: theme(duration, setting(fallbacks, duration));
+$_default-timing-function: theme(timing, setting(fallbacks, timing));
 
 $_default-properties: (
   background-color,
