--- a/scss/koi.scss
+++ b/scss/koi.scss
@@ -1,5 +1,6 @@
 // @forward 'config';
-// @forward 'helpers';
-// @forward 'theme';
-// @forward 'api';
+@forward 'helpers';
+@forward 'api';
 // @forward 'base';
+
+// components?
