--- a/scss/tokens/_border.scss
+++ b/scss/tokens/_border.scss
@@ -2,16 +2,14 @@
 //   Border
 // --------------------------------
 
-@use '../helpers/unit' as *;
-
 $radius: (
-  xs: px-to-rem(2),
-  sm: px-to-rem(3),
-  md: px-to-rem(4),
-  lg: px-to-rem(6),
-  xl: px-to-rem(8),
-  2xl: px-to-rem(12),
-  3xl: px-to-rem(16),
-  4xl: px-to-rem(24),
+  xs: 2px,
+  sm: 3px,
+  md: 4px,
+  lg: 6px,
+  xl: 8px,
+  2xl: 12px,
+  3xl: 16px,
+  4xl: 24px,
   full: 9999px,
 ) !default;
