--- a/scss/tokens/_spacing.scss
+++ b/scss/tokens/_spacing.scss
@@ -4,49 +4,46 @@
 
 @use 'sass:map';
 
-@use '../config' as *;
-@use '../helpers/unit' as *;
-
-$spacer: map.get($config, spacer);
+$spacer: 1rem;
 
 // Base spacing system
 $spacing-scale: (
   0: 0,
-  1: px-to-rem(1),
-  2: px-to-rem(2),
-  4: px-to-rem(4),
-  6: px-to-rem(6),
-  8: px-to-rem(8),
-  10: px-to-rem(10),
-  12: px-to-rem(12),
-  14: px-to-rem(14),
-  16: px-to-rem(16),
-  20: px-to-rem(20),
-  24: px-to-rem(24),
-  28: px-to-rem(28),
-  32: px-to-rem(32),
-  36: px-to-rem(36),
-  40: px-to-rem(40),
-  44: px-to-rem(44),
-  48: px-to-rem(48),
-  56: px-to-rem(56),
-  64: px-to-rem(64),
-  80: px-to-rem(80),
-  96: px-to-rem(96),
-  112: px-to-rem(112),
-  128: px-to-rem(128),
-  144: px-to-rem(144),
-  160: px-to-rem(160),
-  176: px-to-rem(176),
-  192: px-to-rem(192),
-  208: px-to-rem(208),
-  224: px-to-rem(224),
-  256: px-to-rem(256),
-  288: px-to-rem(288),
-  320: px-to-rem(320),
-  384: px-to-rem(384),
-  448: px-to-rem(448),
-  512: px-to-rem(512),
+  1: 0.0625rem,
+  2: 0.125rem,
+  4: 0.25rem,
+  6: 0.375rem,
+  8: 0.5rem,
+  10: 0.625rem,
+  12: 0.75rem,
+  14: 0.875rem,
+  16: 1rem,
+  20: 1.25rem,
+  24: 1.5rem,
+  28: 1.75rem,
+  32: 2rem,
+  36: 2.25rem,
+  40: 2.5rem,
+  44: 2.75rem,
+  48: 3rem,
+  56: 3.5rem,
+  64: 4rem,
+  80: 5rem,
+  96: 6rem,
+  112: 7rem,
+  128: 8rem,
+  144: 9rem,
+  160: 10rem,
+  176: 11rem,
+  192: 12rem,
+  208: 13rem,
+  224: 14rem,
+  256: 16rem,
+  288: 18rem,
+  320: 20rem,
+  384: 24rem,
+  448: 28rem,
+  512: 32rem,
 ) !default;
 
 $spacers: (
