--- a/scss/tokens/_typography.scss
+++ b/scss/tokens/_typography.scss
@@ -2,8 +2,6 @@
 //   Typography
 // --------------------------------
 
-@use '../helpers/unit' as *;
-
 $font-family: (
   sans: (
     ui-sans-serif,
@@ -44,59 +42,59 @@ $font-family: (
 // Font size with default line-height
 $font-size: (
   2xs: (
-    px-to-rem(10),
-    px-to-rem(12),
+    0.625rem,
+    0.75rem,
   ),
   xs: (
-    px-to-rem(12),
-    px-to-rem(16),
+    0.75rem,
+    1rem,
   ),
   sm: (
-    px-to-rem(14),
-    px-to-rem(20),
+    0.875rem,
+    1.25rem,
   ),
   md: (
-    px-to-rem(16),
-    px-to-rem(24),
+    1rem,
+    1.5rem,
   ),
   lg: (
-    px-to-rem(18),
-    px-to-rem(28),
+    1.125rem,
+    1.75rem,
   ),
   xl: (
-    px-to-rem(20),
-    px-to-rem(28),
+    1.25rem,
+    1.75rem,
   ),
   2xl: (
-    px-to-rem(24),
-    px-to-rem(32),
+    1.5rem,
+    2rem,
   ),
   3xl: (
-    px-to-rem(30),
-    px-to-rem(36),
+    1.875rem,
+    2.25rem,
   ),
   4xl: (
-    px-to-rem(36),
-    px-to-rem(40),
+    2.25rem,
+    2.5rem,
   ),
   5xl: (
-    px-to-rem(48),
+    3rem,
     1,
   ),
   6xl: (
-    px-to-rem(60),
+    3.75rem,
     1,
   ),
   7xl: (
-    px-to-rem(72),
+    4.5rem,
     1,
   ),
   8xl: (
-    px-to-rem(96),
+    6rem,
     1,
   ),
   9xl: (
-    px-to-rem(128),
+    8rem,
     1,
   ),
 ) !default;
@@ -115,16 +113,16 @@ $font-weight: (
 
 // Line Height
 $leading: (
-  1: px-to-rem(8),
-  2: px-to-rem(10),
-  3: px-to-rem(12),
-  4: px-to-rem(16),
-  5: px-to-rem(20),
-  6: px-to-rem(24),
-  7: px-to-rem(28),
-  8: px-to-rem(32),
-  9: px-to-rem(36),
-  10: px-to-rem(40),
+  1: 0.5rem,
+  2: 0.625rem,
+  3: 0.75rem,
+  4: 1rem,
+  5: 1.25rem,
+  6: 1.5rem,
+  7: 1.75rem,
+  8: 2rem,
+  9: 2.25rem,
+  10: 2.5rem,
   none: 1,
   tight: 1.25,
   snug: 1.375,
