--- a/scss/config/_index.scss
+++ b/scss/config/_index.scss
@@ -1,19 +1,2 @@
-@forward 'settings';
-
-// @use 'sass:map';
-
-// @forward 'theme';
-
-// @use 'defaults';
-
-// $config: () !default;
-// $config: map.deep-merge(defaults.$config, $config);
-
-// Get a config value
-// @function config($keys...) {
-//   @if map.has-key($config, $keys...) {
-//     @return map.get($config, $keys...);
-//   } @else {
-//     @return null;
-//   }
-// }
+@forward 'settings' show $settings;
+@forward 'theme' show $theme;
