--- a/scss/api/_color.scss
+++ b/scss/api/_color.scss
@@ -1,6 +1,5 @@
-@use '../internal/color' as *;
-@use '../internal/output' as *;
 @use '../helpers/color' as *;
+@use '../internal' as *;
 @use 'setting' as *;
 @use 'theme' as *;
 
