--- a/scss/koi.scss
+++ b/scss/koi.scss
@@ -1,6 +1,7 @@
-// @forward 'config';
+@forward 'config';
 @forward 'helpers';
 @forward 'api';
-// @forward 'base';
+@forward 'base';
 
 // components?
+// utilities?
