--- a/scss/api/_index.scss
+++ b/scss/api/_index.scss
@@ -7,6 +7,7 @@
 @forward 'layer';
 @forward 'layout';
 @forward 'media-query';
+@forward 'setting';
 @forward 'shadow';
 @forward 'size';
 @forward 'spacing';
