--- a/scss/internal/_output.scss
+++ b/scss/internal/_output.scss
@@ -2,18 +2,21 @@
 //   Output Helpers
 // --------------------------------
 
+@use 'sass:map';
 @use 'sass:meta';
 @use 'sass:string';
 
-@use '../config' as *;
 @use '../helpers/string' as *;
+@use '../config' as *;
 
 // --------------------------------
 //   Functions
 // --------------------------------
 
+$_prefix: map.get($settings, prefix);
+
 // Return the prefix of the css vars if configured
-@function _css-var-prefix($prefix: config(prefix)) {
+@function _css-var-prefix($prefix: $_prefix) {
   $prefix: if($prefix == '', '', '#{$prefix}-');
   @return $prefix;
 }
@@ -22,7 +25,7 @@
 @function css-var-name($name, $key: null, $suffix: null) {
   $prefix: _css-var-prefix();
   $suffix: if($suffix, '-#{$suffix}', '');
-  
+
   $key: if($name and $key, '-#{$key}', $key);
 
   @return '--#{$prefix}#{$name}#{$key}#{$suffix}';
