--- a/dev/assets/scss/_base.scss
+++ b/dev/assets/scss/_base.scss
@@ -18,9 +18,12 @@ body {
 }
 
 .wrapper {
-  @include koi.animation(blink);
   @include koi.rounded(md);
-  padding: koi.spacing(xl);
+  @include koi.fluid-padding-block(md, 4xl);
+}
+
+h1 {
+  font-size: koi.fluid-font-size(4xl, 6xl);
 }
 
 // .a,
