--- a/scss/api/_typography.scss
+++ b/scss/api/_typography.scss
@@ -3,6 +3,7 @@
 // --------------------------------
 
 @use 'sass:map';
+@use 'sass:math';
 @use 'sass:list';
 @use 'sass:string';
 
@@ -30,6 +31,21 @@ $_default-tracking: setting(fallbacks, tracking);
 
 @function font-size($font-size: $_default-font-size) {
   @return list.nth(theme(font-size, $font-size), 1);
+}
+
+@function fluid-font-size(
+  $min-font-size,
+  $max-font-size,
+  $preferred-size: setting(typography, preferred-fluid-font-size)
+) {
+  $min-font-size: if(theme-has-key(font-size, $min-font-size), font-size($min-font-size), $min-font-size);
+  $max-font-size: if(theme-has-key(font-size, $max-font-size), font-size($max-font-size), $max-font-size);
+
+  @return clamp(
+    var(--koi-fluid-min-font-size, $min-font-size),
+    var(--koi-fluid-preferred-font-size, string.unquote($preferred-size)),
+    var(--koi-fluid-max-font-size, $max-font-size)
+  );
 }
 
 @function font-weight($font-weight: $_default-font-weight) {
