--- a/scss/api/_typography.scss
+++ b/scss/api/_typography.scss
@@ -36,14 +36,14 @@ $_default-tracking: setting(fallbacks, tracking);
 @function fluid-font-size(
   $min-font-size,
   $max-font-size,
-  $preferred-size: setting(typography, preferred-fluid-font-size)
+  $preferred-font-size: setting(typography, preferred-fluid-font-size)
 ) {
   $min-font-size: if(theme-has-key(font-size, $min-font-size), font-size($min-font-size), $min-font-size);
   $max-font-size: if(theme-has-key(font-size, $max-font-size), font-size($max-font-size), $max-font-size);
 
   @return clamp(
     var(--koi-fluid-min-font-size, $min-font-size),
-    var(--koi-fluid-preferred-font-size, string.unquote($preferred-size)),
+    var(--koi-fluid-preferred-font-size, string.unquote($preferred-font-size)),
     var(--koi-fluid-max-font-size, $max-font-size)
   );
 }
