--- a/scss/api/_size.scss
+++ b/scss/api/_size.scss
@@ -1,6 +1,6 @@
-// --------------------------------
-//   Size API
-// --------------------------------
+// ---------------------------------
+//   Size API (width, height, etc.)
+// ---------------------------------
 
 @use 'theme' as *;
 
