--- a/scss/config/_colors.scss
+++ b/scss/config/_colors.scss
@@ -45,7 +45,7 @@ $colors: (
   ),
   white: map.get($colors, white),
   black: map.get($colors, black),
-  gray: map.get($colors, gray),
+  grey: map.get($colors, grey),
   success: map.get($colors, green),
   info: map.get($colors, blue),
   warning: map.get($colors, yellow),
