--- a/scss/koi.scss
+++ b/scss/koi.scss
@@ -2,6 +2,5 @@
 @forward 'helpers';
 @forward 'api';
 @forward 'base';
-
-// components?
-// utilities?
+@forward 'components';
+// @forward 'utilities';
