--- a/scss/api/_layout.scss
+++ b/scss/api/_layout.scss
@@ -2,10 +2,12 @@
 //   Layout API
 // -------------------------------------
 
+@use 'sass:math';
 @use 'sass:meta';
 
 @use 'media-query' as *;
 @use 'border' as *;
+@use 'size' as *;
 @use 'spacing' as *;
 @use 'shadow' as *;
 @use 'theme' as *;
@@ -14,8 +16,7 @@
 //   Mixins
 // -------------------------------------
 
-// Basic box element with theme defaults that
-// can be composed with other utilities.
+// Basic box element with theme defaults that can be composed with other utilities.
 // Based on https://smolcss.dev/#smol-unbreakable-boxes */
 @mixin box($max-width: 100%, $color: null, $bg-color: null, $padding: null, $rounded: null, $shadow: null) {
   background-color: $bg-color;
@@ -24,7 +25,13 @@
   word-break: break-word;
 
   @if $max-width {
-    width: $max-width;
+    @if theme-has-key(sizes, $max-width) {
+      width: size($max-width);
+    } @else if meta.type-of($max-width) == number and not math.is-unitless($max-width) {
+      width: $max-width;
+    } @else {
+      @error "#{$max-width} is not a valid value.";
+    }
   }
 
   // Add padding to the element, either by value, by
@@ -33,7 +40,7 @@
     @if theme-has-key(spacing, $padding) {
       padding-left: theme(spacing, $padding);
       padding-right: theme(spacing, $padding);
-    } @else if meta.type-of($padding) == number {
+    } @else if meta.type-of($padding) == number and not math.is-unitless($padding) {
       padding-left: $padding;
       padding-right: $padding;
     } @else {
