--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -12,9 +12,13 @@
 //   Functions
 // --------------------------------
 
-@function _heading-font-size($heading-number) {
+@function _heading-font-size($heading-level) {
   $sizes: setting(typography, headings-font-size);
-  @return list.nth($sizes, $heading-number);
+  @return list.nth($sizes, $heading-level);
+}
+
+@function _heading-prose-spacing($heading-level, $margin-top: true, $margin-bottom: true) {
+  // TODO: !
 }
 
 // --------------------------------
@@ -35,6 +39,8 @@
       overflow-wrap: break-word;
     }
   }
+
+  // TODO: Lists
 }
 
 @mixin headings {
@@ -52,67 +58,106 @@
   h1,
   .h1 {
     $font-size: _heading-font-size(1);
-    $font-size-rem: font-size($font-size);
-    $font-size-px: rem-to-px($font-size-rem);
-
-    @include text-size($font-size);
-    margin-bottom: em(40px, $font-size-px);
-    margin-top: 0;
+    font-size: font-size($font-size);
   }
 
   h2,
   .h2 {
     $font-size: _heading-font-size(2);
-    $font-size-rem: font-size($font-size);
-    $font-size-px: rem-to-px($font-size-rem);
-
-    @include text-size($font-size);
-    margin-bottom: em(28px, $font-size-px);
-    margin-top: em(56px, $font-size-px);
+    font-size: font-size($font-size);
   }
 
   h3,
   .h3 {
     $font-size: _heading-font-size(3);
-    $font-size-rem: font-size($font-size);
-    $font-size-px: rem-to-px($font-size-rem);
-
-    @include text-size($font-size);
-    margin-bottom: em(22px, $font-size-px);
-    margin-top: em(44px, $font-size-px);
+    font-size: font-size($font-size);
   }
 
   h4,
   .h4 {
     $font-size: _heading-font-size(4);
-    $font-size-rem: font-size($font-size);
-    $font-size-px: rem-to-px($font-size-rem);
-
-    @include text-size($font-size);
-    margin-bottom: em(16px, $font-size-px);
-    margin-top: em(32px, $font-size-px);
+    font-size: font-size($font-size);
   }
 
   h5,
   .h5 {
     $font-size: _heading-font-size(5);
-    $font-size-rem: font-size($font-size);
-    $font-size-px: rem-to-px($font-size-rem);
-
-    @include text-size($font-size);
-    margin-bottom: em(12px, $font-size-px);
-    margin-top: em(24px, $font-size-px);
+    font-size: font-size($font-size);
   }
 
   h6,
   .h6 {
     $font-size: _heading-font-size(6);
-    $font-size-rem: font-size($font-size);
-    $font-size-px: rem-to-px($font-size-rem);
+    font-size: font-size($font-size);
+  }
 
-    @include text-size($font-size);
-    margin-bottom: em(10px, $font-size-px);
-    margin-top: em(20px, $font-size-px);
+  // Add margins and line-height for prose headings
+  .prose {
+    h1,
+    .h1 {
+      $font-size: _heading-font-size(1);
+      $font-size-rem: font-size($font-size);
+      $font-size-px: rem-to-px($font-size-rem);
+
+      line-height: text-leading($font-size);
+      margin-bottom: em(40px, $font-size-px);
+      margin-top: 0;
+    }
+
+    h2,
+    .h2 {
+      $font-size: _heading-font-size(2);
+      $font-size-rem: font-size($font-size);
+      $font-size-px: rem-to-px($font-size-rem);
+
+      line-height: text-leading($font-size);
+      margin-bottom: em(28px, $font-size-px);
+      margin-top: em(56px, $font-size-px);
+    }
+
+    h3,
+    .h3 {
+      $font-size: _heading-font-size(3);
+      $font-size-rem: font-size($font-size);
+      $font-size-px: rem-to-px($font-size-rem);
+
+      line-height: text-leading($font-size);
+      margin-bottom: em(22px, $font-size-px);
+      margin-top: em(44px, $font-size-px);
+    }
+
+    h4,
+    .h4 {
+      $font-size: _heading-font-size(4);
+      $font-size-rem: font-size($font-size);
+      $font-size-px: rem-to-px($font-size-rem);
+
+      line-height: text-leading($font-size);
+      margin-bottom: em(16px, $font-size-px);
+      margin-top: em(32px, $font-size-px);
+    }
+
+    h5,
+    .h5 {
+      $font-size: _heading-font-size(5);
+      $font-size-rem: font-size($font-size);
+      $font-size-px: rem-to-px($font-size-rem);
+
+      line-height: text-leading($font-size);
+      margin-bottom: em(12px, $font-size-px);
+      margin-top: em(24px, $font-size-px);
+    }
+
+    h6,
+    .h6 {
+      $font-size: _heading-font-size(6);
+      $font-size-rem: font-size($font-size);
+      $font-size-px: rem-to-px($font-size-rem);
+
+      line-height: text-leading($font-size);
+      margin-bottom: em(10px, $font-size-px);
+      margin-top: em(20px, $font-size-px);
+    }
   }
 }
 
